--- a/instagram/Base.lproj/Main.storyboard
+++ b/instagram/Base.lproj/Main.storyboard
@@ -123,47 +123,56 @@
                                     <action selector="shareButton:" destination="hdT-HQ-Ocs" eventType="touchUpInside" id="EyN-BK-Vay"/>
                                 </connections>
                             </button>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZZh-Xn-s0m">
+                                <rect key="frame" x="0.0" y="88" width="259" height="808"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="it9-ST-UJg">
+                                        <rect key="frame" x="0.0" y="0.0" width="259" height="808"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="73" id="2GZ-Fr-kym" customClass="TableViewCell" customModule="instagram" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="259" height="73"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2GZ-Fr-kym" id="6GC-9E-WXV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="259" height="73"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="hdT-HQ-Ocs" id="PXS-Rf-WkX"/>
+                                            <outlet property="delegate" destination="hdT-HQ-Ocs" id="ImS-dP-Owi"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="fcR-eK-Izv"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="NCm-v1-GYi"/>
+                    <navigationItem key="navigationItem" id="NCm-v1-GYi">
+                        <barButtonItem key="leftBarButtonItem" title="menu" id="5C3-OH-z7F">
+                            <connections>
+                                <action selector="menuBtn:" destination="hdT-HQ-Ocs" id="3uA-wj-hRU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageview" destination="7Nw-tq-ws3" id="4Bq-qi-EL9"/>
                         <outlet property="shareTextfield" destination="uo7-l6-PtX" id="aMf-kp-CP7"/>
-                        <segue destination="lUY-ms-9MF" kind="show" identifier="imageCell" id="LGc-YD-sQm"/>
+                        <outlet property="sidebar" destination="it9-ST-UJg" id="O8W-8G-eEd"/>
+                        <outlet property="sideview" destination="ZZh-Xn-s0m" id="G2Z-0I-qAX"/>
+                        <segue destination="Mt1-rO-Txs" kind="show" identifier="imageCell" id="7ho-bd-34B"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="27K-gz-Psu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1186.9565217391305" y="-31.473214285714285"/>
-        </scene>
-        <!--Post View Controller-->
-        <scene sceneID="yyv-Oa-8sI">
-            <objects>
-                <viewController id="lUY-ms-9MF" customClass="postViewController" customModule="instagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rAa-kx-We0" customClass="possibly">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UlS-SV-rzB">
-                                <rect key="frame" x="87" y="261" width="240" height="256"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Evl-pv-yX2"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="B6p-ho-8Ck"/>
-                    <connections>
-                        <outlet property="postImageView" destination="UlS-SV-rzB" id="bGl-tb-vcH"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yy1-Jz-IHP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1937.68115942029" y="-31.473214285714285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ygk-8O-gT5">
@@ -182,6 +191,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dlS-Lg-f53" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-543.47826086956525" y="-31.473214285714285"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="s9v-jy-7GJ">
+            <objects>
+                <tableViewController id="Mt1-rO-Txs" customClass="TableViewController" customModule="instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ra4-sy-MuF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="QJL-Bh-FLi">
+                                <rect key="frame" x="0.0" y="28" width="414" height="200"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QJL-Bh-FLi" id="97T-5a-4rZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Mt1-rO-Txs" id="9pl-BZ-smO"/>
+                            <outlet property="delegate" destination="Mt1-rO-Txs" id="Mv9-jN-Y6I"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="dFW-f3-Bbp"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Oq-Gm-L6j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2015.9420289855075" y="-31.473214285714285"/>
         </scene>
     </scenes>
     <resources>
